Getting closer to implementing REPL in XS...
* Refactored "Host" into XSRuntime (non-UI) and UIAwareHost (UI & policy layer)
* Added "Parse JSON string as XS JSON" for building UI
* Added ContentControl

--- a/src/XSRT2/ClassHandlers.tt
+++ b/src/XSRT2/ClassHandlers.tt
@@ -360,7 +360,7 @@ namespace XSRT2 {
         <#
         ClassDef(
             "ContentControl",
-            false,
+            true,
             "Control",
             props:new PropEntry[] {
                 DefaultBasicProp("Content", "CreateFromState(valueToken, lastValueToken, context)")
