--- a/src/XSRT2/ClassHandlers.tt
+++ b/src/XSRT2/ClassHandlers.tt
@@ -25,10 +25,71 @@ using Windows.UI.Xaml.Automation.Peers;
 using Windows.UI.Xaml.Media.Imaging;
 using Windows.UI.Xaml.Input;
 using Windows.UI.Xaml.Shapes;
+using Windows.UI.Xaml.Controls.Maps;
 
 namespace XSRT2 {
     public static class Handler
     {
+        <#
+        ClassDef(
+            "MapControl",
+            true,
+            "Control",
+            props:new PropEntry[] {
+                // UNDONE: ActualCamera
+                BooleanProp("BusinessLandmarksVisible"),
+                // UNDONE: Center
+                // UNDONE: Children
+                // UNDONE: public MapColorScheme ColorScheme { get; set; }
+                // UNDONE: public MapCustomExperience CustomExperience { get; set; }
+                DoubleProp("DesiredPitch"),
+                DoubleProp("Heading"),
+                // READONLY: BooleanProp("Is3DSupported"),
+                // READONLY: BooleanProp("IsStreetsideSupported"),
+                BooleanProp("LandmarksVisible"),
+                // UNDONE: public MapLoadingStatus LoadingStatus { get; }
+                // UNDONE: public IList<MapElement> MapElements { get; }
+                StringProp("MapServiceToken"),
+                // READONLY: DoubleProp("MaxZoomLevel"),
+                // READONLY: DoubleProp("MinZoomLevel"),
+                // UNDONE: public MapPanInteractionMode PanInteractionMode { get; set; }
+                BooleanProp("PedestrianFeaturesVisible"),
+                // READONLY: DoubleProp("Pitch"),
+                // UNDONE: public MapInteractionMode RotateInteractionMode { get; set; }
+                // UNDONE: public IList<MapRouteView> Routes { get; }
+                // UNDONE: public MapScene Scene { get; set; }
+                // UNDONE: public MapStyle Style { get; set; }
+                // UNDONE: public MapCamera TargetCamera { get; }
+                // UNDONE: public IList<MapTileSource> TileSources { get; }
+                // UNDONE: public MapInteractionMode TiltInteractionMode { get; set; }
+                BooleanProp("TrafficFlowVisible"),
+                // UNDONE: public Point TransformOrigin { get; set; }
+                BooleanProp("TransitFeaturesVisible"),
+                // UNDONE: public MapWatermarkMode WatermarkMode { get; set; }
+                // UNDONE: public MapInteractionMode ZoomInteractionMode { get; set; }
+                DoubleProp("ZoomLevel")
+            },
+            events:new EventEntry[] {
+                new EventEntry() { Name="ActualCameraChanged", WinRTName="ActualCameraChanged", EventType="MapActualCameraChangedEventArgs" },
+                new EventEntry() { Name="ActualCameraChanging", WinRTName="ActualCameraChanging", EventType="MapActualCameraChangingEventArgs" },
+                new EventEntry() { Name="CenterChanged", WinRTName="CenterChanged", EventType="Object" },
+                new EventEntry() { Name="CustomExperienceChanged", WinRTName="CustomExperienceChanged", EventType="MapCustomExperienceChangedEventArgs" },
+                new EventEntry() { Name="HeadingChanged", WinRTName="HeadingChanged", EventType="Object" },
+                new EventEntry() { Name="LoadingStatusChanged", WinRTName="LoadingStatusChanged", EventType="Object" },
+                new EventEntry() { Name="MapDoubleTapped", WinRTName="MapDoubleTapped", EventType="MapInputEventArgs" },
+                new EventEntry() { Name="MapElementClick", WinRTName="MapElementClick", EventType="MapElementClickEventArgs" },
+                new EventEntry() { Name="MapElementPointerEntered", WinRTName="MapElementPointerEntered", EventType="MapElementPointerEnteredEventArgs" },
+                new EventEntry() { Name="MapElementPointerExited", WinRTName="MapElementPointerExited", EventType="MapElementPointerExitedEventArgs" },
+                new EventEntry() { Name="MapHolding", WinRTName="MapHolding", EventType="MapInputEventArgs" },
+                new EventEntry() { Name="MapTapped", WinRTName="MapTapped", EventType="MapInputEventArgs" },
+                new EventEntry() { Name="PitchChanged", WinRTName="PitchChanged", EventType="Object" },
+                new EventEntry() { Name="TargetCameraChanged", WinRTName="TargetCameraChanged", EventType="MapTargetCameraChangedEventArgs" },
+                new EventEntry() { Name="TransformOriginChanged", WinRTName="TransformOriginChanged", EventType="Object" },
+                new EventEntry() { Name="ZoomLevelChanged", WinRTName="ZoomLevelChanged", EventType="Object" },
+            }
+        );
+        #>
+
         <#
         // UNDONE: rest of Shape
         ClassDef(
